--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,60 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+@theme {
+  /* Dark Colors */
+  --color-dark-900: #111111;
+  --color-dark-700: #757575;
+  --color-dark-500: #AAAAAA;
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+  /* Light Colors */
+  --color-light-100: #ffffff;
+  --color-light-200: #F5F5F5;
+  --color-light-300: #E5E5E5;
+  --color-light-400: #CCCCCC;
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  /* Accent Colors */
+  --color-green: #007d48;
+  --color-red: #d33918;
+  --color-orange: #d37918;
+  
+  /* Font family */
+  --font-josh: 'Jost', sans-serif;
+
+   /* Heading sizes */
+  --text-heading-1: 72px;
+  --text-heading-1--line-height: 78px;
+  --text-heading-1--font-weight: 700;
+
+  --text-heading-2: 56px;
+  --text-heading-2--line-height: 60px;
+  --text-heading-2--font-weight: 700;
+
+  --text-heading-3: 24px;
+  --text-heading-3--line-height: 30px;
+  --text-heading-3--font-weight: 500;
+
+  /* Lead */
+  --text-lead: 20px;
+  --text-lead--line-height: 28px;
+  --text-lead--font-weight: 500;
+
+  /* Body */
+  --text-body: 16px;
+  --text-body--line-height: 24px;
+  --text-body--font-weight: 400;
+
+  --text-body-medium: 16px;
+  --text-body-medium--line-height: 24px;
+  --text-body-medium--font-weight: 500;
+
+  /* Caption */
+  --text-caption: 14px;
+  --text-caption--line-height: 20px;
+  --text-caption--font-weight: 500;
+
+  /* Footnote */
+  --text-footnote: 12px;
+  --text-footnote--line-height: 18px;
+  --text-footnote--font-weight: 400;
 }
